[tool.poetry]
name = "tsoha"
version = "0.1.0"
description = ""
authors = ["FexbYk <81040763+FexbYk23@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
